# smartdiff

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  AST_DIFF_FIX.md  AUGMENT_DEBUG_GUIDE.md  AUGMENT_FIXED.md  AUGMENT_STATUS.md  BINARY_COMPARISON_USAGE_GUIDE.md  BINARY_NINJA_INTEGRATION_README.md  BN_DIFF_FEATURE_COMPARISON.md  BN_DIFF_INTEGRATION_FINAL_SUMMARY.md  BN_DIFF_MCP_INTEGRATION_PLAN.md  BN_DIFF_MCP_REVISED_PLAN.md  BN_DIFF_MCP_SUMMARY.md  BN_DIFF_QUICKSTART_IMPLEMENTATION.md  CHANGES_SUMMARY.md  CLA.md  CLASS_HIERARCHY_IMPLEMENTATION_COMPLETE.md  COMMERCIAL_LICENSE.md  CONTRIBUTING.md  CROSS_FILE_REFACTORING_IMPLEMENTATION.md  Cargo.toml  DEFAULT_IGNORE_WHITESPACE.md  Dockerfile  FINAL_IMPLEMENTATION_SUMMARY.md  FIX_EMPTY_FILE_DISPLAY.md  FIX_HYDRATION_ERROR.md  FRONTEND_IMPROVEMENTS.md  FRONTEND_MCP_INTEGRATION.md  GRAPH_BALANCE_UPDATE.md  GRAPH_FIX_FINAL.md  GRAPH_PERFORMANCE_IMPROVEMENTS.md  IGNORE_WHITESPACE_FEATURE.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  LANGUAGE_COVERAGE_IMPLEMENTATION_STATUS.md  LICENSE  MCP_IMPLEMENTATION_SUMMARY.md  MCP_IMPROVEMENTS_SUMMARY.md  (+47 more)
.github/workflows/: ci.yml  release.yml
crates/binary-ninja-client/: Cargo.toml  README.md
crates/binary-ninja-client/src/: client.rs  lib.rs  types.rs
crates/cli/: Cargo.toml
crates/cli/src/: cli.rs  main.rs  output.rs
crates/cli/src/assets/: diff.css
crates/cli/src/commands/: analyze.rs  compare.rs  config.rs  doctor.rs  mod.rs
crates/diff-engine/: Cargo.toml
crates/diff-engine/src/: binary_matcher.rs  changes.rs  class_hierarchy_tracker.rs  cross_file_tracker.rs  engine.rs  file_refactoring_detector.rs  file_refactoring_detector_tests.rs  graph_matcher.rs  hungarian_matcher.rs  lib.rs  matching.rs  refactoring.rs  similarity_scorer.rs  smart_matcher.rs  symbol_migration_tracker.rs  tree_edit.rs
crates/mcp-server/: CLAUDE_SETUP.md  Cargo.toml  MCP_USAGE.md  README.md  SSE_SETUP.md  sse_bridge.py  start_sse_bridge.sh
crates/mcp-server/examples/: test_mcp.sh
crates/mcp-server/src/: main.rs  server.rs  sse_main.rs
crates/mcp-server/src/comparison/: binary_comparison.rs  context.rs  manager.rs  mod.rs
crates/mcp-server/src/mcp/: messages.rs  mod.rs  protocol.rs  sse_transport.rs  transport.rs
crates/mcp-server/src/resources/: mod.rs
crates/mcp-server/src/tools/: binary_tools.rs  mod.rs
crates/parser/: Cargo.toml  README.md
crates/parser/src/: ast.rs  ast_builder.rs  ast_processor.rs  function.rs  language.rs  language_config.rs  lib.rs  matching.rs  parser.rs  tests.rs  tree_sitter.rs
crates/parser/tests/: new_languages_test.rs
crates/semantic-analysis/: Cargo.toml  README.md
crates/semantic-analysis/src/: analyzer.rs  comprehensive_dependency_graph.rs  dependency_graph.rs  function_signature_extractor.rs  lib.rs  scope_manager.rs  symbol_resolver.rs  symbol_table.rs  tests.rs  type_dependency_graph.rs  type_extractor.rs  type_system.rs
crates/web-ui/: Cargo.toml
crates/web-ui/src/: api.rs  handlers.rs  main.rs  models.rs
docs/: architecture.md  class-hierarchy-tracking.md  cross-file-refactoring-detection.md  developer-guide.md  graph-optimization-comparison.md  graph-performance-optimizations.md  graph-tuning-guide.md  nextjs-architecture.md  user-guide.md
docs/api/: integration-guide.md  openapi.yaml
examples/: README.md  ast_generation_demo.rs  change_classification_demo.rs  class_hierarchy_tracking_demo.rs  cli_demo.rs  cross_file_tracking_demo.rs  dependency_graph_demo.rs  enhanced_cross_file_detection_demo.rs  function_signature_demo.rs  hungarian_matching_demo.rs  language_detection_demo.rs  parse_demo.rs  refactoring_pattern_demo.rs  similarity_scoring_demo.rs  symbol_resolution_demo.rs  test_binary_comparison.rs  type_extraction_demo.rs  zhang_shasha_demo.rs
examples/cli/: basic-comparison.sh  ci-integration.sh
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/components/: CodeEditor.tsx  FunctionCentricView.tsx  Layout.tsx  SideBySideDiffView.tsx  StructureView.tsx  UnifiedDiffView.tsx
frontend/src/pages/: AnalyzePage.tsx  ComparePage.tsx  DemoPage.tsx  HomePage.tsx  SettingsPage.tsx
nextjs-frontend/: README.md  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo
nextjs-frontend/src/api/: client.ts
nextjs-frontend/src/app/: globals.css  layout.tsx  page.tsx
nextjs-frontend/src/app/api/comparison/analyze/: route.ts
nextjs-frontend/src/app/api/comparison/diff/: route.ts
nextjs-frontend/src/app/api/comparison/file-content/: route.ts
nextjs-frontend/src/app/api/filesystem/browse/: route.ts
nextjs-frontend/src/app/api/filesystem/home/: route.ts
nextjs-frontend/src/app/api/mcp/compare-locations/: route.ts
nextjs-frontend/src/app/api/mcp/function-diff/: route.ts
nextjs-frontend/src/app/api/mcp/list-changed-functions/: route.ts
nextjs-frontend/src/app/enhanced-diff/: page.tsx
nextjs-frontend/src/components/analysis/: FunctionAnalysisDashboard.tsx  FunctionDetailView.tsx
nextjs-frontend/src/components/diff/: BeyondCompareFunctionDiff.tsx  DiffComparison.tsx  EnhancedDiffComparison.tsx  FunctionCentricDiffView.tsx  InteractiveDiffViewer.tsx  ModernASTDiffViewer.tsx
nextjs-frontend/src/components/filesystem/: DirectoryPicker.tsx  FileSystemExplorer.tsx
nextjs-frontend/src/components/graph/: FunctionGraph.tsx  FunctionGraphViewer.tsx  InteractiveGraph.tsx
nextjs-frontend/src/components/layout/: MainLayout.tsx  Sidebar.tsx
nextjs-frontend/src/components/performance/: OptimizedFileList.tsx
nextjs-frontend/src/components/search/: AdvancedSearch.tsx  SearchResultsPanel.tsx
nextjs-frontend/src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  Dialog.tsx  Input.tsx
nextjs-frontend/src/hooks/: useResponsive.ts  useVirtualScroll.ts
nextjs-frontend/src/services/: astDiffService.ts  comparisonService.ts  diffService.ts
nextjs-frontend/src/types/: index.ts
static/: app.js  index.html  styles.css
tests/: graph-performance-test.md
