[package]
name = "smart-diff-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Command-line interface for smart code diffing"

[[bin]]
name = "smart-diff"
path = "src/main.rs"

[dependencies]
# Workspace dependencies
smart-diff-parser = { path = "../parser" }
smart-diff-semantic = { path = "../semantic-analysis" }
smart-diff-engine = { path = "../diff-engine" }
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

# CLI dependencies
clap.workspace = true
colored.workspace = true
indicatif = "0.17"
console = "0.15"
tokio.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tempfile = "3.8"
assert_cmd = "2.0"
