[package]
name = "smart-diff-parser"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Multi-language parser engine for smart code diffing"

[dependencies]
# Core dependencies
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true

# Tree-sitter dependencies
tree-sitter.workspace = true
tree-sitter-java.workspace = true
tree-sitter-python.workspace = true
tree-sitter-javascript.workspace = true
tree-sitter-cpp.workspace = true
tree-sitter-c.workspace = true

# Additional dependencies
once_cell = "1.19"
regex = "1.10"
walkdir = "2.4"
uuid = { version = "1.6", features = ["v4"] }
edit-distance = "2.1"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tempfile = "3.8"

[[example]]
name = "parse_demo"
path = "../../examples/parse_demo.rs"

[[example]]
name = "language_detection_demo"
path = "../../examples/language_detection_demo.rs"
