[package]
name = "smart-diff-semantic"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Semantic analysis engine for code understanding and symbol resolution"

[dependencies]
# Workspace dependencies
smart-diff-parser = { path = "../parser" }
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true

# Graph and algorithm dependencies
petgraph.workspace = true
indexmap = "2.0"
dashmap = "5.5"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tempfile = "3.8"

[[example]]
name = "symbol_resolution_demo"
path = "../../examples/symbol_resolution_demo.rs"

[[example]]
name = "type_extraction_demo"
path = "../../examples/type_extraction_demo.rs"

[[example]]
name = "dependency_graph_demo"
path = "../../examples/dependency_graph_demo.rs"
