[package]
name = "smart-diff-web"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Web server and API for smart code diffing"

[[bin]]
name = "smart-diff-server"
path = "src/main.rs"

[dependencies]
# Workspace dependencies
smart-diff-parser = { path = "../parser" }
smart-diff-semantic = { path = "../semantic-analysis" }
smart-diff-engine = { path = "../diff-engine" }
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true

# Web dependencies
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Additional dependencies for directory comparison
walkdir = "2.4"
regex = "1.10"
dirs = "5.0"
edit-distance = "2.1"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tempfile = "3.8"
reqwest = { version = "0.11", features = ["json"] }
